(#5) Update urls in core extension to correct repo
This commit updates the URL's used in the metadata
for the chocolatey-core.extension package to point to
the correct repository.

--- a/src/chocolatey-core.extension/chocolatey-core.extension.nuspec
+++ b/src/chocolatey-core.extension/chocolatey-core.extension.nuspec
@@ -13,16 +13,15 @@ This package provides helper functions installed as a Chocolatey extension.
 These functions may be used in Chocolatey install/uninstall scripts by declaring this package a dependency in your package's nuspec.
     </description>
     <tags>chocolatey core extension admin</tags>
-    <projectUrl>https://github.com/chocolatey/chocolatey-coreteampackages</projectUrl>
+    <projectUrl>https://github.com/chocolatey-community/chocolatey-extensions</projectUrl>
     <!--<iconUrl>http://cdn.rawgit.com/chocolatey-coreteampackages/master/icons/chocolatey-common.extension.png</iconUrl>-->
     <copyright>© 2016 Chocolatey Core Team Package Contributors</copyright>
-    <licenseUrl>https://github.com/chocolatey/chocolatey-coreteampackages/blob/master/LICENSE.md</licenseUrl>
+    <licenseUrl>https://github.com/chocolatey-community/chocolatey-extensions/blob/master/LICENSE.md</licenseUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <projectSourceUrl>https://github.com/chocolatey/chocolatey-coreteampackages</projectSourceUrl>
-    <packageSourceUrl>https://github.com/chocolatey/chocolatey-coreteampackages/tree/master/extensions/chocolatey-core.extension</packageSourceUrl>
-    <docsUrl>https://github.com/chocolatey/chocolatey-coreteampackages/tree/master/extensions/chocolatey-core.extension/README.md</docsUrl>
-    <bugTrackerUrl>https://github.com/chocolatey/chocolatey-coreteampackages/issues</bugTrackerUrl>
-    <releaseNotes>https://github.com/chocolatey/chocolatey-coreteampackages/tree/master/extensions/chocolatey-core.extension/CHANGELOG.md</releaseNotes>
+    <projectSourceUrl>https://github.com/chocolatey-community/chocolatey-extensions/tree/master/src/chocolatey-core.extension</projectSourceUrl>
+    <docsUrl>https://github.com/chocolatey-community/chocolatey-extensions/blob/master/src/chocolatey-core.extension/README.md</docsUrl>
+    <bugTrackerUrl>https://github.com/chocolatey-community/chocolatey-extensions/issues</bugTrackerUrl>
+    <releaseNotes>https://github.com/chocolatey-community/chocolatey-extensions/blob/master/src/chocolatey-core.extension/CHANGELOG.md</releaseNotes>
     </metadata>
     <files>
     <file src="extensions\**" target="extensions" />
