(#7) Add dependency on compatibility extension
This commit adds a dependency on chocolatey-compatibilty.extension
package to prevent future breaking in chocolatey-core.extension.

--- a/src/chocolatey-core.extension/chocolatey-core.extension.nuspec
+++ b/src/chocolatey-core.extension/chocolatey-core.extension.nuspec
@@ -22,6 +22,9 @@ These functions may be used in Chocolatey install/uninstall scripts by declaring
     <docsUrl>https://github.com/chocolatey-community/chocolatey-extensions/blob/master/src/chocolatey-core.extension/README.md</docsUrl>
     <bugTrackerUrl>https://github.com/chocolatey-community/chocolatey-extensions/issues</bugTrackerUrl>
     <releaseNotes>https://github.com/chocolatey-community/chocolatey-extensions/blob/master/src/chocolatey-core.extension/CHANGELOG.md</releaseNotes>
+    <dependencies>
+      <dependency id="chocolatey-compatibility.extension" version="1.0.0" />
+    </dependencies>
     </metadata>
     <files>
     <file src="extensions\**" target="extensions" />
