--- a/src/chocolatey-core.extension/chocolatey-core.extension.nuspec
+++ b/src/chocolatey-core.extension/chocolatey-core.extension.nuspec
@@ -3,15 +3,27 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2015/06/nuspec.xsd">
   <metadata>
     <id>chocolatey-core.extension</id>
-    <version>1.3.6</version>
+    <version>1.4.0</version>
     <title>Chocolatey Core Extensions</title>
     <summary>Helper functions extending core choco functionality</summary>
     <authors>chocolatey</authors>
     <owners>chocolatey-community</owners>
-    <description>
-This package provides helper functions installed as a Chocolatey extension.
+    <description><![CDATA[This is a extension package that provides helper functions installed as a Chocolatey extension.
 These functions may be used in Chocolatey install/uninstall scripts by declaring this package a dependency in your package's nuspec.
-    </description>
+This package provides helper functions that can be used to enhance what is already available out of the box with Chocolatey CLI.
+This includes both features that are being tested for Chocolatey CLI itself, and other helpers to make the maintenance of
+Chocolatey packages easier.
+
+Helpers that were available in this package, and were later added to Chocolatey CLI, will be moved to
+the package [chocolatey-compatibility.extension](https://community.chocolatey.org/packages/chocolatey-compatibility.extension).
+
+Backwards compatibility is not considered for helpers available in this package, see the Notes below.
+
+## Notes
+
+- There is [a known bug](https://github.com/chocolatey-community/chocolatey-extensions/issues/11) in the function `Get-AppInstallLocation` with parameter `$AppNamePattern` which is internally used both as wildcard and regex patterns. This usually doesn't create any problems, but may do so if application contains regex symbols in the name, such as [notepad++](https://github.com/chocolatey-community/chocolatey-coreteampackages/issues/1198).
+- This package itself is not concerned with keeping backwards compatibility with Chocolatey CLI. If compatibility is of concern, instead take a dependency on [chocolatey-compatibility.extension](https://community.chocolatey.org/packages/chocolatey-compatibility.extension).
+]]></description>
     <tags>chocolatey core extension admin</tags>
     <projectUrl>https://github.com/chocolatey-community/chocolatey-extensions</projectUrl>
     <!--<iconUrl>http://cdn.rawgit.com/chocolatey-coreteampackages/master/icons/chocolatey-common.extension.png</iconUrl>-->
