(maint) Add missing dependency on push
This commit updates the workflow that are responsible
for pushing packages to CCR. This adds the dependency
wormies-au-helpers package to the workflow so it can
be used to easily update the release notes before pushing.

--- a/.github/workflows/package-pusher.yml
+++ b/.github/workflows/package-pusher.yml
@@ -18,8 +18,8 @@ jobs:
     steps:
       - name: Install Dependencies
         run: |
-          # Placeholder for installing dependencies
-          # choco install chocolatey-core.extension -y
+          # Used to easily update metadata before pushing packages
+          choco install wormies-au-helpers -y --ignore-dependencies
         shell: powershell
       - name: Environment Information
         run: |
